# praxis

./: .indent.pro  Makefile.in  README  configure
autoconf/: configure.in  install-sh
doc/: balloc.txt  event.txt  example.conf  example_module.c  modules.txt  praxis.plan  todo.txt
include/: balloc.h  channel.h  config.h  configparse.h  connection.h  dlink.h  event.h  events.h  hash.h  ilog.h  imem.h  io.h  irc.h  module.h  net.h  praxis.h  send.h  sendq.h  server.h  setup.h.in  timer.h  token.h  uplink.h  user.h
modules/: .depend  Makefile.in  m_dummy.c  static_modules.sh
sqlite/: .depend  Makefile.in
src/: .depend  Makefile.in
src/core/: balloc.c  channel.c  config.c  configparse.c  connection.c  dlink.c  event.c  hash.c  ilog.c  imem.c  io.c  irc.c  module.c  net.c  praxis.c  send.c  sendq.c  server.c  timer.c  token.c  uplink.c  user.c  util.c  version.sh
src/irc/: m_error.c  m_kill.c  m_nick.c  m_pass.c  m_ping.c  m_quit.c  m_server.c  m_sid.c  m_squit.c  m_uid.c
src/userserv/: .depend  m_test.c  m_test2.c
